Fixed chair images stretching in relay page

--- a/public/scss/more-maple/relayStyles.scss
+++ b/public/scss/more-maple/relayStyles.scss
@@ -93,7 +93,6 @@ body {
     }
 }
 
-.score-breakdown {
-    top: 2px;
-    right: 2px;
+.chair-preview-full {
+    object-fit: contain;
 }
